# EREN

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_OVERVIEW.md  AUDITORIA_ARQUITECTONICA.md  CORE_SPECIFICATION.md  MASTER_ROADMAP.md  PROJECT_BOOTSTRAP.md  README.md  SYSTEM_DESIGN.md  TECH_BIBLE.md  VISION.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  temp-create-users.js
.github/workflows/: ci.yml
apps/: README.md
apps/api/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
apps/api/app/: __init__.py  main.py
apps/api/app/ai/: __init__.py  cognitive_runtime.py  memory.py  planning_engine.py  reasoning_engine.py
apps/api/app/clinical/: __init__.py  cdss.py  differential_diagnosis.py  evidence.py  root_cause.py
apps/api/app/clinical/diagnosis/: __init__.py  events.py  repository.py  service.py
apps/api/app/clinical/patient/: __init__.py  events.py  service.py
apps/api/app/config/: README.md  __init__.py  settings.py
apps/api/app/core/: README.md  __init__.py  database.py  exceptions.py  logging.py
apps/api/app/domain/asset/: repository.py
apps/api/app/domain/capacity/: __init__.py  repository.py
apps/api/app/domain/department/: repository.py
apps/api/app/domain/device/: __init__.py  cache.py  events.py  repository.py  service.py
apps/api/app/domain/diagnosis/: __init__.py  repository.py  service.py
apps/api/app/domain/incident/: __init__.py  repository.py
apps/api/app/domain/inventory/: repository.py
apps/api/app/domain/knowledge/: __init__.py  repository.py
apps/api/app/domain/organization/: repository.py
apps/api/app/domain/patient/: __init__.py  repository.py  service.py
apps/api/app/domain/recommendation/: __init__.py  repository.py
apps/api/app/domain/staffing/: __init__.py  repository.py
apps/api/app/domain/work_order/: __init__.py  events.py  repository.py  service.py
apps/api/app/enterprise/: __init__.py  licensing.py  support.py  versioning.py
apps/api/app/events/: __init__.py  outbox.py  publisher.py
apps/api/app/infrastructure/: __init__.py  events.py  unit_of_work.py
apps/api/app/infrastructure/messaging/: __init__.py  cache.py  outbox.py  rabbitmq.py
apps/api/app/infrastructure/models/: __init__.py  asset.py  capacity.py  department.py  device.py  incident.py  inventory.py  knowledge.py  organization.py  recommendation.py  staffing.py  work_order.py
apps/api/app/infrastructure/observability/: __init__.py  logging.py  tracing.py
apps/api/app/infrastructure/repositories/: __init__.py  device.py  incident.py  knowledge.py  recommendation.py
apps/api/app/infrastructure/vault/: __init__.py  client.py
apps/api/app/integrations/: __init__.py  dicom_client.py  fhir_client.py  hl7_listener.py  mqtt_client.py
apps/api/app/middleware/: README.md  __init__.py  audit.py  authentication.py  request_context.py
apps/api/app/ml/: __init__.py  ai_metrics.py  analytics.py  feedback_learning.py  fine_tuning.py  model_evaluation.py  prompt_optimization.py
apps/api/app/models/: README.md  __init__.py  base.py  diagnosis.py  patient.py
apps/api/app/providers/: circuit_breaker.py
apps/api/app/providers/security/: supabase_auth.py
apps/api/app/routers/: README.md  __init__.py  auth.py  beds.py  buildings.py  campuses.py  departments.py  devices.py  diagnosis.py  floors.py  health.py  hospitals.py  organizations.py  patients.py  purchase_orders.py  roles.py  rooms.py  spare_parts.py  staff.py  suppliers.py  teams.py  units.py  warehouses.py  work_orders.py
apps/api/app/schemas/: README.md  __init__.py  asset.py  bed.py  building.py  campus.py  department.py  device.py  diagnosis.py  floor.py  health.py  organization.py  patient.py  room.py  spare_part.py  staff.py  supplier.py  team.py  unit.py  warehouse.py  work_order.py
apps/api/app/services/: README.md  __init__.py
apps/api/app/tasks/: celery_app.py  device_tasks.py  knowledge_tasks.py  outbox_tasks.py
apps/api/eren_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/migrations/: README.md  env.py
apps/api/migrations/versions/: 001_initial_schema.py  002_incident_schema.py  003_device_schema.py  004_recommendation_schema.py  005_knowledge_schema.py  006_work_order_schema.py  007_rls_enforcement.py  008_hospital_capacity_schema.py
apps/api/scripts/: migrate.py  run_outbox_worker.py
apps/api/tests/: README.md  conftest.py  test_health.py
apps/api/tests/integration/: __init__.py  test_clinical_flow.py  test_device_flow.py  test_patient_flow.py
apps/api/tests/unit/: test_device_router.py  test_device_service.py  test_diagnosis_service.py  test_diagnosis_service_negative.py  test_knowledge_service.py  test_patient_service.py  test_patient_service_negative.py  test_recommendation_service.py  test_work_order_router.py  test_work_order_service.py
apps/desktop/: README.md  package.json
apps/mobile/: __init__.py
apps/web/: README.md  __init__.py  middleware.ts  package.json
core/: README.md
core/LEGACY/: README.md
core/PHASE_1/: README.md
core/PHASE_2/: README.md
core/PHASE_3/: README.md
core/PHASE_4/: __init__.py
core/PHASE_5/: __init__.py
core/agents/: README.md  __init__.py  capabilities.py  cognitive_agent_integration.py  communicator.py  context.py  events.py  health.py  lifecycle.py  metrics.py  registry.py  runtime.py  scheduler.py  types.py
core/ai/: __init__.py
core/boot/: README.md  __init__.py  boot_manager.py  boot_metrics.py  boot_policy.py  boot_trace.py  exceptions.py
core/capabilities/: README.md  __init__.py  capability.py  descriptor.py  (+4 more)
docs/: EREN_MANIFESTO.md  PHASES_PLAN.md  PROJECT_PROMPT.md  README.md  TECH_STACK_ANALYSIS.md
eren_os.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
infrastructure/: README.md
scripts/: check-schema.ts  diagnose-db.ts  fix-establecimientos-length.sql
tests/: README.md  README_PHASES.md  conftest.py  test_epic3_asset.py  test_epic3_capacity.py  test_epic3_department.py  test_epic3_inventory.py  test_epic3_organization.py  test_epic3_staffing.py
(+2641 files in other folders)
