[project]
name = "eren-os"
version = "0.4.0"
description = "EREN - Cognitive Operating System for Clinical Engineering"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "EREN Team", email = "team@eren-os.dev" }
]
keywords = ["cognitive", "operating-system", "clinical", "engineering", "ai"]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "apps*", "plugins*", "packages*", "infrastructure*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "C4",
    "RUF",
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "RUF001",   # ambiguous character name
    "N806",     # variable in function uppercase (legacy)
    "N803",     # argument name uppercase (legacy)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
target-version = ["py312"]
line-length = 100
extend-exclude = """
/(
    \\.git
  | \\.mypy_cache
  | \\.ruff_cache
  | __pycache__
  | node_modules
)/
"""

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["core"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["core"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/_internal/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
show_missing = true
