[project]
name = "eren-api"
version = "0.1.0"
description = "EREN API — FastAPI backend for the EREN Cognitive Operating System."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core web framework
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "email-validator>=2.0,<3.0",

    # Database
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "aiosqlite>=0.20,<1.0",
    "asyncpg>=0.29,<1.0",
    "psycopg2-binary>=2.9,<3.0",

    # Authentication
    "supabase>=2.0,<3.0",
    "python-jose[cryptography]>=3.3,<4.0",

    # Caching & Messaging
    "redis>=5.0,<6.0",
    "aio-pika>=9.4,<10.0",

    # Observability
    "opentelemetry-api>=1.24,<2.0",
    "opentelemetry-sdk>=1.24,<2.0",
    "opentelemetry-exporter-otlp>=1.24,<2.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0,<1.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0,<1.0",
    "opentelemetry-instrumentation-redis>=0.45b0,<1.0",
    "python-json-logger>=2.0,<3.0",

    # Secrets
    "hvac>=2.0,<3.0",

    # Utilities
    "httpx>=0.27,<1.0",
    # Background Tasks
    "celery>=5.4,<6.0",
]

[project.optional-dependencies]
observability = [
    "opentelemetry-api>=1.24,<2.0",
    "opentelemetry-sdk>=1.24,<2.0",
    "opentelemetry-exporter-otlp>=1.24,<2.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0,<1.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0,<1.0",
]
vault = ["hvac>=2.0,<3.0"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "migrations*"]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.6,<1.0",
    "mypy>=1.10,<2.0",
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "httpx>=0.27,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "C4", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "migrations/"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"
